Fixed Navbar Issue on small screens

--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,11 @@ h1 {
   .post {
     width: 100%;
   }
-
+}
+@media only screen and (max-width: 850px) {
+  nav ul li {
+    display: block;
+  }
 }
 @media only screen and (max-width: 770px) {
   #footer {
